# lpc32x0-utilities

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  clkpwr.c  emc.c  gpdma.c  gpio.c  interrupt.c  interrupt.h  lcd.c  lpc32x0-dump.c  lpc32x0-offline.c  lpc32x0-spi.c  lpc32x0-write.c  mlc.c  pinmux.c  registers.c  registers.h  slc.c  spi.c  ssp.c  ts.c
test/: 00-notes  clk.linux-2.6.27.8  clk.linux-5.0.19  clk.linux-5.0.19-adjust-hclkpll  clk.linux-5.0.19-everything-off  clk.nautel-fast-clock-260MHz  clk.nautel-hit-a-key  clk.nautel-medium-clock-234MHz  clk.nautel-slow-clock-208MHz  clk.nautel-testing-sdram  clk.u-boot-2018.07  clock_power  emc.1  emc.2  emc1.1  gpdma.1  interrupt  lcd.2  mlc.1  slc.1  slc.2
